# trading-boat

./: .dockerignore  .env.example  Makefile  README.Docker.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  init.sql  pyproject.toml
backend/app/: analytics_service.py  auth.py  email_service.py  encryption.py  export_service.py  main.py  models.py  news_service.py  scheduler.py  screener.py  trading.py
frontend/: .env  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AdminLayout.tsx  Layout.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminLogs.tsx  AdminTrades.tsx  AdminUsers.tsx  AdvancedAnalytics.tsx  Backtest.tsx  BrokerSetup.tsx  BucketTrading.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  Logs.tsx  NewsSentiment.tsx  OAuthCallback.tsx  Register.tsx  ResetPassword.tsx  Settings.tsx  Trading.tsx
frontend/src/services/: api.ts
